--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
-<!DOCTYPE html>
+<html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/svg+xml" href= "https://e7.pngegg.com/pngimages/761/667/png-clipart-apple-worldwide-developers-conference-logo-iphone-imessage-apple-company-computer-thumbnail.png" />
     <link rel="stylesheet" href="style.css">
-    <title>into the lols.</title>
+    <title>into the lols</title>
 </head>
 <body>
     <div class="donut-container">
